--- a/Kreativan Technology clone/index.html
+++ b/Kreativan Technology clone/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="respon.css">
+    <!-- <link rel="stylesheet" href="respon.css"> -->
 </head>
 
 <body>
